# talk-to-your-code

./: .env.example  .gitignore  README.md  pyproject.toml
talk_to_your_code/: __init__.py  cli.py  config.py  context_builder.py  graph_summary.py  indexing.py  languages.py  ollama_client.py  orchestrator.py  parser.py  retriever.py  scanner.py  schemas.py  storage.py
talk_to_your_code/api/: main.py
talk_to_your_code/ui/: streamlit_app.py
