[project]
name = "talk-to-your-code"
version = "0.1.0"
description = "Local codebase chatbot with Ollama, SQLite, FastAPI, and Streamlit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.37.0",
    "pydantic>=2.8.0",
    "requests>=2.32.0",
    "numpy>=1.26.0",
    "pathspec>=0.12.1",
    "code-graph-ai-summarizer",
]

[project.scripts]
tyc = "talk_to_your_code.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["talk_to_your_code*"]

[tool.uv.sources]
code-graph-ai-summarizer = { git = "https://github.com/shaktiwadekar9/code-graph-ai-summarizer.git" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
